@@ -41,7 +41,8 @@
 ;; +-----+------------------+
 ;
 ; Basekeys:
-;; For letters, numbers, and F1-F12 the basekey name is simply the intended key.
+;; For all printable symbols (e.g. 'a', '/', '.', '0', etc) and F1-F12
+;; the basekey name is simply the intended key.
 ;; Special basekeys are presented below:
 ;; +--------------+------------------+
 ;; | Basekey Name |    Description   |
@@ -76,6 +77,9 @@
 ;
 ; Quit w3wm with Win+Shift+Escape
 ;;; w3wm_close=W-s-Escape
+;
+; Move window right with Win+Ctrl+-
+;;; wnd_RIght=C-w--
 ;
 ; Move focus left with Ctrl+F
 ;;; focus_left=C-f
